fix close button and test tap on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@ body {
   background: linear-gradient(-30deg, #2d2e37, #191861);
   font-family: "Rubik", sans-serif;
   height: 100vh;
+  -webkit-tap-highlight-color: transparent;
 }
 
 li {
@@ -387,13 +388,23 @@ input[type="range"]::-ms-thumb {
 
 .header-modal-playlist,
 .header-modal-playlist-love {
-  width: 90%;
+  /* width: 100%;
   height: 30px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin: 0 auto;
   padding: 20px 0;
+  position: sticky;
+  top: 0;
+  background: var(--text-color); */
+  width: 90%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: auto;
+  padding: 20px 0 10px;
   position: sticky;
   top: 0;
   background: var(--text-color);
@@ -511,7 +522,7 @@ input[type="range"]::-ms-thumb {
   height: 100%;
   display: flex;
   align-items: center;
-  justify-content: end;
+  justify-content: center;
 }
 .list-songs_icon.active {
   color: red !important;
